# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
assets/shaders/: rainbow.frag
client/: client.cpp  main.cpp  pathhelper.cpp  scenemanager.cpp  utils.cpp  windowevent.cpp  windowinit.cpp
client/minigame/: minigame_game.cpp  minigame_menu.cpp
client/window/: connection_menu.cpp  connection_protocol.cpp  keymapping.cpp  lobby.cpp  lobbyevent.cpp  settings.cpp
client/window/game/: game.cpp  game_anime.cpp  game_handle.cpp  game_init.cpp  game_setup.cpp  game_utils.cpp
docs/: architecture.md  binary_protocol.md  coordinator.md  developer_guidelines.md  entity_management.md  networking.md  overview.md
gameengine/ecs/: componentmanager.cpp  coordinator.cpp  entitymanager.cpp  systemmanager.cpp
gameengine/systems/: explosionsystem.cpp  healthsystem.cpp  inputsystem.cpp  lasersystem.cpp  levelsystem.cpp  movementsystem.cpp  namerendersystem.cpp  rendersystem.cpp  scoresystem.cpp  shadersystem.cpp  stagesystem.cpp
include/: protocol.hpp
include/client/: client.hpp  pathhelper.hpp  scenemanager.hpp  utils.hpp  windowevent.hpp  windowinit.hpp
include/client/minigame/: minigame_game.hpp  minigame_menu.hpp
include/client/window/: connection_menu.hpp  game.hpp  interpolation.hpp  keymapping.hpp  lobby.hpp  settings.hpp
include/gameengine/: components.hpp
include/gameengine/ecs/: component.hpp  componentmanager.hpp  componentmanager.tpp  coordinator.hpp  coordinator.tpp  ecs_commands.hpp  entity.hpp  entityManager.tpp  entitymanager.hpp  system.hpp  systemmanager.hpp  systemmanager.tpp
include/gameengine/systems/: explosionsystem.hpp  healthsystem.hpp  inputsystem.hpp  lasersystem.hpp  levelsystem.hpp  movementsystem.hpp  namerendersystem.hpp  rendersystem.hpp  scoresystem.hpp  shadersystem.hpp  stagesystem.hpp
include/network/: connection_protocol.hpp
include/server/: server.hpp  server_manager.hpp
server/: boss_spawn.cpp  collision.cpp  main.cpp  monster_spawn.cpp  server.cpp  server_game_logic.cpp  server_manager.cpp  server_message.cpp  stage.cpp
workflows/: ci_cd.yml
